# sentiment-analysis

./: .gitignore  README.md  classification_tfidf.py  imdb_anatomy.py  main.py  pyproject.toml  run_imdb_anatomy.py
bert-exp1/: eval_bert.py  train_bert.py
bert-exp2/: train_bert.py
bert-exp3/: train_eval_bert_v2.py  train_eval_bert_v2_integrated.py
bert-exp3/models/: __init__.py  lora_bert_meanpool_clsv2.py
bow-exp1/: run_classification_tfidf.py
imdb_analysis/: imdb_anatomy.py  run_imdb_anatomy.py
src/sentiment_analysis/: __init__.py  cli.py  config.py  data.py  eda.py  training.py  utils.py
src/sentiment_analysis/models/: __init__.py  bert.py  bow.py
