[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Reproducible IMDb sentiment analysis experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
    "datasets>=2.14",
    "transformers>=4.37",
    "evaluate>=0.4",
    "torch",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=1.5",
    "wordcloud>=1.9",
    "typer[all]>=0.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "joblib>=1.2",
    "peft>=0.6",
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[project.scripts]
sentiment-cli = "sentiment_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
